[package]
name = "tarkov-database-rs"
version = "0.1.0-alpha.7"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openssl = ["open-ssl", "awc/openssl"]
rustls = ["rust-tls", "awc/rustls"]

[dependencies]
awc = "2"
open-ssl = { version = "0.10", package = "openssl", optional = true }
rust-tls = { version = "0.18", package = "rustls", optional = true }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "7"
thiserror = "1"
env_logger = "0.7"
