[package]
name = "tarkov-database-rs"
version = "0.2.0-alpha.4"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
tokio = { version = "1", features = ["fs", "sync"], default-features = false }
reqwest = { version = "0.11", features = [
    "json",
    "trust-dns",
], default-features = false }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
thiserror = "1"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }

[dev-dependencies]
tokio = { version = "1", features = [
    "test-util",
    "rt",
    "macros",
], default-features = false }
